--- a/public/berita.html
+++ b/public/berita.html
@@ -9,34 +9,20 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
     <title>Berita & Informasi Pajak Kendaraan Bermotor</title>
-    <meta name="description" content="Cek Pajak Kendaraan Bermotor Online Indonesia">
-    <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Online, Indonesia" />
+    <meta name="description"
+        content="Berita dan Informasi terkini mengenai Pajak Kendaraan Bermotor, Bebas Pajak, Pemutihan, Diskon Pajak, Bebas Balik Nama dan Mutasi Motor dan Mobil">
+    <meta name="keywords" content="Berita, Informasi, Kendaraan, Bermotor" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="assets/css/inc/owl-carousel/owl.carousel.min.css" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146" crossorigin="anonymous"> </script>
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-TTTM8TM');
-    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+        crossorigin="anonymous"> </script>
 </head>
 
 <body>
-
-    <!-- G-Tag -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTTM8TM"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- G-Tag  -->
 
     <!-- loader -->
     <div id="loader">
@@ -76,7 +62,7 @@
                     </div>
                     <ul class="listview image-listview media mb-2">
                         <li>
-                            <a href="#" class="item">
+                            <a href="" class="item">
                                 <div class="imageWrapper">
                                     <img src="assets/img/sample/photo/1.jpg" alt="image" class="imaged w64">
                                 </div>
@@ -90,7 +76,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="item">
+                            <a href="" class="item">
                                 <div class="imageWrapper">
                                     <img src="assets/img/sample/photo/2.jpg" alt="image" class="imaged w64">
                                 </div>
@@ -103,7 +89,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="item">
+                            <a href="" class="item">
                                 <div class="imageWrapper">
                                     <img src="assets/img/sample/photo/3.jpg" alt="image" class="imaged w64">
                                 </div>
@@ -115,8 +101,13 @@
                                 </div>
                             </a>
                         </li>
+                        <!-- Go To Top -->
+                        <a href="#" class="button goTop">
+                            <material-icons class="material-icons-outlined">arrow_upward</material-icons>
+                        </a>
+                        <!-- * Go To Top -->
                         <li>
-                            <a href="#" class="item">
+                            <a href="" class="item">
                                 <div class="imageWrapper">
                                     <img src="assets/img/sample/photo/5.jpg" alt="image" class="imaged w64">
                                 </div>
@@ -129,7 +120,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="item">
+                            <a href="" class="item">
                                 <div class="imageWrapper">
                                     <img src="assets/img/sample/photo/6.jpg" alt="image" class="imaged w64">
                                 </div>
@@ -147,6 +138,7 @@
         </aside>
         <!-- * App Capsule -->
     </main>
+
     <!-- * Main -->
 
     <!-- App Bottom Menu -->
@@ -294,10 +286,6 @@
     <!-- Bootstrap-->
     <script src="assets/js/lib/popper.min.js"></script>
     <script src="assets/js/lib/bootstrap.min.js"></script>
-    <!-- Ionicons -->
-    <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
-    <!-- Owl Carousel -->
-    <script src="assets/js/plugins/owl-carousel/owl.carousel.min.js"></script>
     <!-- jQuery Circle Progress -->
     <script src="assets/js/plugins/jquery-circle-progress/circle-progress.min.js"></script>
     <!-- Base Js File -->
