--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -9,34 +9,19 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
     <title>Cek Pajak Kendaraan Bermotor Online</title>
-    <meta name="description" content="Cek Pajak Kendaraan Bermotor Online Indonesia">
-    <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Online, Indonesia" />
+    <meta name="description" content="Cek Pajak Kendaraan Bermotor Mobil Motor Online Se-Indonesia">
+    <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Mobil, Motor Online, Indonesia" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="assets/css/inc/owl-carousel/owl.carousel.min.css" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146" crossorigin="anonymous"> </script>
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-TTTM8TM');
-    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+        crossorigin="anonymous"> </script>
 </head>
 
 <body>
-
-    <!-- G-Tag -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTTM8TM"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- G-Tag  -->
 
     <!-- loader -->
     <div id="loader">
@@ -113,6 +98,11 @@
                             </div>
                         </a>
                     </li>
+                    <!-- Go To Top -->
+                    <a href="#" class="button goTop">
+                        <material-icons class="material-icons-outlined">arrow_upward</material-icons>
+                    </a>
+                    <!-- * Go To Top -->
                     <li>
                         <a href="https://info.dipendajatim.go.id/esamsat/" target="_blank" class="item" rel="noopener">
                             <div class="imageWrapper">
@@ -180,11 +170,6 @@
                             </div>
                         </a>
                     </li>
-                    <!-- Go To Top -->
-                    <a href="#" class="button goTop">
-                        <ion-icon name="arrow-up-outline"></ion-icon>
-                    </a>
-                    <!-- * Go To Top -->
                     <li>
                         <a href="https://badanpendapatan.riau.go.id/infopajak/" target="_blank" class="item"
                             rel="noopener">
@@ -357,12 +342,6 @@
                         </a>
                     </li>
                 </ul>
-                <!-- Go To Top -->
-                <a href="#" class="button goTop">
-                    <ion-icon name="arrow-up-outline"></ion-icon>
-                </a>
-                <!-- * Go To Top -->
-
             </div>
         </aside>
         <!-- * App Capsule -->
@@ -514,10 +493,6 @@
     <!-- Bootstrap-->
     <script src="assets/js/lib/popper.min.js"></script>
     <script src="assets/js/lib/bootstrap.min.js"></script>
-    <!-- Ionicons -->
-    <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
-    <!-- Owl Carousel -->
-    <script src="assets/js/plugins/owl-carousel/owl.carousel.min.js"></script>
     <!-- jQuery Circle Progress -->
     <script src="assets/js/plugins/jquery-circle-progress/circle-progress.min.js"></script>
     <!-- Base Js File -->
