--- a/public/index.html
+++ b/public/index.html
@@ -16,27 +16,12 @@
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="assets/css/inc/owl-carousel/owl.carousel.min.css" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146" crossorigin="anonymous"> </script>
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-TTTM8TM');
-    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+        crossorigin="anonymous"> </script>
 </head>
 
 <body>
-
-    <!-- G-Tag -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTTM8TM"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- G-Tag  -->
 
     <!-- loader -->
     <div id="loader">
@@ -53,22 +38,6 @@
             </div>
         </div>
         <!-- * App Header -->
-
-        <!-- Search Component -->
-        <div id="search" class="appHeader">
-            <form class="search-form">
-                <div class="form-group searchbox">
-                    <input type="text" class="form-control" placeholder="Search...">
-                    <i class="input-icon">
-                        <ion-icon name="search-outline"></ion-icon>
-                    </i>
-                    <a href="javascript:;" class="ml-1 close toggle-searchbox">
-                        <ion-icon name="close-circle"></ion-icon>
-                    </a>
-                </div>
-            </form>
-        </div>
-        <!-- * Search Component -->
 
         <!-- App Capsule -->
         <aside role="complementary">
@@ -94,7 +63,7 @@
 
                 <!-- Go To Top -->
                 <a href="#" class="button goTop">
-                    <ion-icon name="arrow-up-outline"></ion-icon>
+                    <material-icons class="material-icons-outlined">arrow_upward</material-icons>
                 </a>
                 <!-- * Go To Top -->
 
@@ -363,10 +332,6 @@
     <!-- Bootstrap-->
     <script src="assets/js/lib/popper.min.js"></script>
     <script src="assets/js/lib/bootstrap.min.js"></script>
-    <!-- Ionicons -->
-    <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
-    <!-- Owl Carousel -->
-    <script src="assets/js/plugins/owl-carousel/owl.carousel.min.js"></script>
     <!-- jQuery Circle Progress -->
     <script src="assets/js/plugins/jquery-circle-progress/circle-progress.min.js"></script>
     <!-- Base Js File -->
