--- a/public/berita.html
+++ b/public/berita.html
@@ -20,6 +20,13 @@
     <link rel="manifest" href="__manifest.json">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
         crossorigin="anonymous"> </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213543611-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-213543611-1');
+    </script>
 </head>
 
 <body>
