--- a/public/kalkulator-pajak-kendaraan-bermotor.html
+++ b/public/kalkulator-pajak-kendaraan-bermotor.html
@@ -17,14 +17,22 @@
     <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146" crossorigin="anonymous"> </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+        crossorigin="anonymous"> </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213543611-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-213543611-1');
+    </script>
 </head>
 
 <body class="bg-white">
 
     <!-- G-Tag -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTTM8TM"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTTM8TM" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- G-Tag  -->
 
