--- a/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport"
@@ -8,7 +9,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
     <title>Tata Cara Bayar Pajak, Mutasi & Balik Nama Kendaraan Bermotor</title>
-    <meta name="description" content="Tata cara dan peraturan mengenai Balik Nama, BPKB, Mutasi, STNK Kendaraan Bermotor baik Motor maupun Mobil">
+    <meta name="description"
+        content="Tata cara dan peraturan mengenai Balik Nama, BPKB, Mutasi, STNK Kendaraan Bermotor baik Motor maupun Mobil">
     <meta name="keywords" content="Cara, Mekanisme, Balik Nama, Mutasi, BPKB, Kehilangan STNK, Motor, Mobil" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
@@ -18,6 +20,13 @@
     <link rel="manifest" href="__manifest.json">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
         crossorigin="anonymous"> </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213543611-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-213543611-1');
+    </script>
 </head>
 
 <body class="bg-white">
