--- a/public/berita.html
+++ b/public/berita.html
@@ -18,8 +18,6 @@
     <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
-        crossorigin="anonymous"> </script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213543611-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -41,11 +39,6 @@
     <main role="main">
         <!-- App Header -->
         <div class="appHeader bg-primary text-light">
-            <div class="left">
-                <a href="javascript:;" class="headerButton goBack">
-                    <ion-icon name="chevron-back-outline"></ion-icon>
-                </a>
-            </div>
             <div class="pageTitle">Berita Samsat Nasional</div>
         </div>
         <!-- * App Header -->
@@ -53,10 +46,6 @@
         <!-- App Capsule -->
         <aside role="complementary">
             <div id="appCapsule">
-                <div class="section full">
-                    <img src="assets/img/banner/Berita-samsat.webp" width="360" height="180" alt="image"
-                        class="imaged square w-100">
-                </div>
                 <div class="section full mt-2 mb-2">
                     <div class="section-title">Berita Samsat</div>
                     <div class="wide-block pt-2 pb-1">
@@ -71,7 +60,7 @@
                         <li>
                             <a href="" class="item">
                                 <div class="imageWrapper">
-                                    <img src="assets/img/sample/photo/1.jpg" alt="image" class="imaged w64">
+                                    <img src="assets/img/sample/photo/1.webp" alt="image" class="imaged w64">
                                 </div>
                                 <div class="in">
                                     <div>
@@ -85,7 +74,7 @@
                         <li>
                             <a href="" class="item">
                                 <div class="imageWrapper">
-                                    <img src="assets/img/sample/photo/2.jpg" alt="image" class="imaged w64">
+                                    <img src="assets/img/sample/photo/1.webp" alt="image" class="imaged w64">
                                 </div>
                                 <div class="in">
                                     <div>
@@ -98,7 +87,7 @@
                         <li>
                             <a href="" class="item">
                                 <div class="imageWrapper">
-                                    <img src="assets/img/sample/photo/3.jpg" alt="image" class="imaged w64">
+                                    <img src="assets/img/sample/photo/1.webp" alt="image" class="imaged w64">
                                 </div>
                                 <div class="in">
                                     <div>
@@ -116,7 +105,7 @@
                         <li>
                             <a href="" class="item">
                                 <div class="imageWrapper">
-                                    <img src="assets/img/sample/photo/5.jpg" alt="image" class="imaged w64">
+                                    <img src="assets/img/sample/photo/1.webp" alt="image" class="imaged w64">
                                 </div>
                                 <div class="in">
                                     <div>
@@ -129,7 +118,7 @@
                         <li>
                             <a href="" class="item">
                                 <div class="imageWrapper">
-                                    <img src="assets/img/sample/photo/6.jpg" alt="image" class="imaged w64">
+                                    <img src="assets/img/sample/photo/1.webp" alt="image" class="imaged w64">
                                 </div>
                                 <div class="in">
                                     <div>
