--- a/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -260,7 +260,7 @@
                                                 <div class="item">
                                                     <div class="dot"></div>
                                                     <div class="content">
-                                                        <div class="text">Membawa Surat Kehilangan dari POLSEK setempat.
+                                                        <div class="text">Membawa Surat Kehilangan dari POLSEK setempat (diurus terlebih dahulu).
                                                         </div>
                                                     </div>
                                                 </div>
@@ -268,21 +268,21 @@
                                                     <div class="dot"></div>
                                                     <div class="content">
                                                         <div class="text">Membawa Surat Keterangan dari Biro OPS
-                                                            POLRES/POLRESTABES.</div>
+                                                            POLRES/POLRESTABES (diurus terlebih dahulu).</div>
                                                     </div>
                                                 </div>
                                                 <div class="item">
                                                     <div class="dot"></div>
                                                     <div class="content">
                                                         <div class="text">Membawa Berita Acara Pemeriksaan dari Reserse
-                                                            POLRE/POLRESTABES.</div>
+                                                            POLRE/POLRESTABES (diurus terlebih dahulu).</div>
                                                     </div>
                                                 </div>
                                                 <div class="item">
                                                     <div class="dot"></div>
                                                     <div class="content">
                                                         <div class="text">Membawa Surat Keterangan dari INFOLAHTA POLDA
-                                                            JABAR.</div>
+                                                            JABAR (diurus terlebih dahulu).</div>
                                                     </div>
                                                 </div>
                                                 <div class="item">
@@ -290,7 +290,7 @@
                                                     <div class="content">
                                                         <div class="text">Membawa Kwitansi Iklan (iklan kehilangan
                                                             kendaraan) dan potongan iklan di media cetak (Iklan di Media
-                                                            Cetak 2x tayangan).
+                                                            Cetak 2x tayangan) (diurus terlebih dahulu).
                                                         </div>
                                                     </div>
                                                 </div>
