--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
 
     <!-- App Bottom Menu -->
     <div class="appBottomMenu">
-        <a href="index.html" class="item active">
+        <a href="/" class="item active">
             <div class="col">
                 <material-icons class="material-icons-outlined">home</material-icons>
                 <strong>Beranda</strong>
@@ -178,7 +178,7 @@
 
                     <ul class="listview flush transparent no-line image-listview mt-2">
                         <li>
-                            <a href="index.html" class="item">
+                            <a href="/" class="item">
                                 <div class="icon-box bg-primary">
                                     <material-icons class="material-icons-outlined">home</material-icons>
                                 </div>
