--- a/public/under-construction.html
+++ b/public/under-construction.html
@@ -49,7 +49,7 @@
             <div class="fixed-footer">
                 <div class="row">
                     <div class="col-12">
-                        <a href="index.html" class="btn btn-primary btn-lg btn-block">Kembali</a>
+                        <a href="/" class="btn btn-primary btn-lg btn-block">Kembali</a>
                     </div>
                 </div>
             </div>
