--- a/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -52,7 +52,7 @@
                     <div class="section-title">Syarat, Proses dan Cara</div>
                     <div class="wide-block pt-2 pb-1">
                         <p>
-                            Mekanisme dan tata cara Pembayaran Pajak dan Pengesahan Ulang 1 tahunan dan 5 tahunan,
+                            Mekanisme dan Tata Cara Pembayaran Pajak dan Pengesahan Ulang 1 tahunan dan 5 tahunan,
                             Kehilangan STNK, Mutasi Kendaraan Bermotor, Balik Nama Kendaraan Bermotor, Ganti Bentuk dan
                             Warna Kendaraan Bermotor.
                         </p>
