--- a/public/berita.html
+++ b/public/berita.html
@@ -50,10 +50,7 @@
                     <div class="section-title">Berita Samsat</div>
                     <div class="wide-block pt-2 pb-1">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at magna porttitor lorem
-                            mollis
-                            ornare. Fusce varius varius massa. Vivamus nec odio tempus, condimentum ex eget, varius
-                            diam.
+                            Berita dan Informasi seputar Kendaraan Bermotor di Indonesia
                         </p>
                     </div>
                     <ul class="listview image-listview media mb-2">
