--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -48,11 +48,11 @@
         <aside role="complementary">
             <div id="appCapsule">
                 <div class="section full mt-2 mb-2">
-                    <div class="section-title">Syarat, Proses dan Cara</div>
+                    <div class="section-title">Tarif Penerimaan Negara Bukan Pajak</div>
                     <div class="wide-block pt-2 pb-1">
                         <p>
-                            Mekanisme dan tata cara Pembayaran Pajak dan Pengesahan Ulang 1 tahunan dan 5 tahunan,
-                            Mutasi Kendaraan Bermotor, Balik Nama Kendaraan Bermotor, dll.
+                            Jenis, Biaya dan Tarif Penerimaan Negara Bukan Pajak yang berlaku pada Kepolisian Negara Republik Indonesia,
+                            yang berhubungan dengan Penerbitan STNK, Biaya Mutasi, Biaya Balik Nama dan Biaya BPKB Kendaraan Bermotor.
                         </p>
                     </div>
                     <div class="accordion" id="accordion">
