--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -11,6 +11,11 @@
     <title>Tarif & Biaya Pajak Kendaraan Bermotor</title>
     <meta name="description" content="Tarif dan Biaya Balik Nama, Mutasi, BPKB, SIM dan Pajak Motor dan Mobil">
     <meta name="keywords" content="Tarif, Biaya, Pajak, Motor, Mobil, STNK, Balik Nama, BPKB, SIM" />
+    <meta property="og:title" content="Cek Pajak Kendaraan Bermotor" />
+    <meta property="og:description"
+        content="Informasi lengkap Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
+    <meta property="og:url" content="https://cekpajak.info" />
+    <meta property="og:image" content="https://cekpajak.info/assets/img/Logo-Cek-Pajak-Dot-Info.png" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -51,8 +56,10 @@
                     <div class="section-title">Tarif Penerimaan Negara Bukan Pajak</div>
                     <div class="wide-block pt-2 pb-1">
                         <p>
-                            Jenis, Biaya dan Tarif Penerimaan Negara Bukan Pajak yang berlaku pada Kepolisian Negara Republik Indonesia,
-                            yang berhubungan dengan Penerbitan STNK, Biaya Mutasi, Biaya Balik Nama dan Biaya BPKB Kendaraan Bermotor.
+                            Jenis, Biaya dan Tarif Penerimaan Negara Bukan Pajak yang berlaku pada Kepolisian Negara
+                            Republik Indonesia,
+                            yang berhubungan dengan Penerbitan STNK, Biaya Mutasi, Biaya Balik Nama dan Biaya BPKB
+                            Kendaraan Bermotor.
                         </p>
                     </div>
                     <div class="accordion" id="accordion">
