--- a/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -12,6 +12,11 @@
     <meta name="description"
         content="Tata cara dan peraturan mengenai Balik Nama, BPKB, Mutasi, STNK Kendaraan Bermotor baik Motor maupun Mobil">
     <meta name="keywords" content="Cara, Mekanisme, Balik Nama, Mutasi, BPKB, Kehilangan STNK, Motor, Mobil" />
+    <meta property="og:title" content="Cek Pajak Kendaraan Bermotor" />
+    <meta property="og:description"
+        content="Informasi lengkap Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
+    <meta property="og:url" content="https://cekpajak.info" />
+    <meta property="og:image" content="https://cekpajak.info/assets/img/Logo-Cek-Pajak-Dot-Info.png" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -667,6 +672,39 @@
 
                     </div>
                 </div>
+
+                <div class="section full mt-2">
+                    <div class="wide-block pt-2 pb-2">
+                        <button type="button" class="btn btn-primary btn-block" data-toggle="modal"
+                            data-target="#actionSheetShareBox">Bagikan</button>
+                    </div>
+                </div>
+                <!-- Share Action Sheet -->
+                <div class="modal fade action-sheet inset" id="actionSheetShareBox" tabindex="-1" role="dialog">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Bagikan dengan</h5>
+                            </div>
+                            <div class="modal-body">
+                                <div class="action-sheet-content text-center">
+                                    <div class="row">
+                                        <div class="col-2">
+                                            <a href="whatsapp://send?text=Cek Pajak Kendaraan Bermotor: https://cekpajak.info/"
+                                                data-action="share/whatsapp/share" class="link-whatsapp"
+                                                class="btn btn-icon btn-facebook" data-dismiss="modal">
+                                                <material-icons class="material-icons-outlined">whatsapp
+                                                </material-icons>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- * Share Action Sheet -->
 
             </div>
 
