--- a/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -690,9 +690,8 @@
                                 <div class="action-sheet-content text-center">
                                     <div class="row">
                                         <div class="col-2">
-                                            <a href="whatsapp://send?text=Cek Pajak Kendaraan Bermotor: https://cekpajak.info/"
-                                                data-action="share/whatsapp/share" class="link-whatsapp"
-                                                class="btn btn-icon btn-facebook" data-dismiss="modal">
+                                            <a href="whatsapp://send?text=Cek Pajak Kendaraan Bermotor" data-action="share/whatsapp/share"class="link-whatsapp"
+                                                class="btn btn-icon btn-facebook">
                                                 <material-icons class="material-icons-outlined">whatsapp
                                                 </material-icons>
                                             </a>
