--- a/public/berita.html
+++ b/public/berita.html
@@ -12,6 +12,11 @@
     <meta name="description"
         content="Berita dan Informasi terkini mengenai Pajak Kendaraan Bermotor, Bebas Pajak, Pemutihan, Diskon Pajak, Bebas Balik Nama dan Mutasi Motor dan Mobil">
     <meta name="keywords" content="Berita, Informasi, Kendaraan, Bermotor" />
+    <meta property="og:title" content="Cek Pajak Kendaraan Bermotor" />
+    <meta property="og:description"
+        content="Informasi lengkap Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
+    <meta property="og:url" content="https://cekpajak.info" />
+    <meta property="og:image" content="https://cekpajak.info/assets/img/Logo-Cek-Pajak-Dot-Info.png" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
