--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     <title>Cek Pajak Dot Info</title>
     <meta name="description" content="Cek Pajak Kendaraan Bermotor Online Indonesia">
     <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Online, Indonesia" />
+    <meta property="og:title" content="Cek Pajak Kendaraan Bermotor" />
+    <meta property="og:description"
+        content="Informasi lengkap Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
+    <meta property="og:url" content="https://cekpajak.info" />
+    <meta property="og:image" content="https://cekpajak.info/assets/img/Logo-Cek-Pajak-Dot-Info.png" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
