--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -68,7 +68,7 @@
                                 <button class="btn collapsed" type="button" data-toggle="collapse"
                                     data-target="#accordion1">
                                     <material-icons class="material-icons-outlined"
-                                        style="margin-right: 6px !important; color:#01579B;">looks_one</material-icons>
+                                        style="margin-right: 6px !important; color:#01579B;">filter_1</material-icons>
                                     Penerbitan STNK
                                 </button>
                             </div>
@@ -140,7 +140,7 @@
                                 <button class="btn collapsed" type="button" data-toggle="collapse"
                                     data-target="#accordion2">
                                     <material-icons class="material-icons-outlined"
-                                        style="margin-right: 6px !important; color:#01579B;">looks_two</material-icons>
+                                        style="margin-right: 6px !important; color:#01579B;">filter_2</material-icons>
                                     Penerbitan Plat Nomor
                                 </button>
                             </div>
@@ -188,7 +188,7 @@
                                 <button class="btn collapsed" type="button" data-toggle="collapse"
                                     data-target="#accordion3">
                                     <material-icons class="material-icons-outlined"
-                                        style="margin-right: 6px !important; color:#01579B;">looks_3</material-icons>
+                                        style="margin-right: 6px !important; color:#01579B;">filter_3</material-icons>
                                     Penerbitan BPKB
                                 </button>
                             </div>
@@ -260,7 +260,7 @@
                                 <button class="btn collapsed" type="button" data-toggle="collapse"
                                     data-target="#accordion4">
                                     <material-icons class="material-icons-outlined"
-                                        style="margin-right: 6px !important; color:#01579B;">looks_4</material-icons>
+                                        style="margin-right: 6px !important; color:#01579B;">filter_4</material-icons>
                                     Penerbitan Surat Mutasi
                                 </button>
                             </div>
@@ -308,7 +308,7 @@
                                 <button class="btn collapsed" type="button" data-toggle="collapse"
                                     data-target="#accordion5">
                                     <material-icons class="material-icons-outlined"
-                                        style="margin-right: 6px !important; color:#01579B;">looks_5</material-icons>
+                                        style="margin-right: 6px !important; color:#01579B;">filter_5</material-icons>
                                     Penerbitan SIM Baru
                                 </button>
                             </div>
@@ -399,7 +399,7 @@
                                 <button class="btn collapsed" type="button" data-toggle="collapse"
                                     data-target="#accordion6">
                                     <material-icons class="material-icons-outlined"
-                                        style="margin-right: 6px !important; color:#01579B;">looks_6</material-icons>
+                                        style="margin-right: 6px !important; color:#01579B;">filter_6</material-icons>
                                     Perpanjangan SIM
                                 </button>
                             </div>
