--- a/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -68,7 +68,7 @@
                                 <button class="btn collapsed" type="button" data-toggle="collapse"
                                     data-target="#accordion1">
                                     <material-icons class="material-icons-outlined"
-                                        style="margin-right: 6px !important; color:#01579B;">looks_one</material-icons>
+                                        style="margin-right: 6px !important; color:#01579B;">filter_1</material-icons>
                                     Proses Pembayaran Pajak 1 Tahunan
                                 </button>
                             </div>
@@ -157,7 +157,7 @@
                                 <button class="btn collapsed" type="button" data-toggle="collapse"
                                     data-target="#accordion2">
                                     <material-icons class="material-icons-outlined"
-                                        style="margin-right: 6px !important; color:#01579B;">looks_two</material-icons>
+                                        style="margin-right: 6px !important; color:#01579B;">filter_2</material-icons>
                                     Proses Pembayaran Pajak 5 Tahunan
                                 </button>
                             </div>
@@ -257,7 +257,7 @@
                                 <button class="btn collapsed" type="button" data-toggle="collapse"
                                     data-target="#accordion3">
                                     <material-icons class="material-icons-outlined"
-                                        style="margin-right: 6px !important; color:#01579B;">looks_3</material-icons>
+                                        style="margin-right: 6px !important; color:#01579B;">filter_3</material-icons>
                                     Proses Duplikat (Kehilangan) STNK
                                 </button>
                             </div>
@@ -425,7 +425,7 @@
                                 <button class="btn collapsed" type="button" data-toggle="collapse"
                                     data-target="#accordion4">
                                     <material-icons class="material-icons-outlined"
-                                        style="margin-right: 6px !important; color:#01579B;">looks_4</material-icons>
+                                        style="margin-right: 6px !important; color:#01579B;">filter_4</material-icons>
                                     Proses Mutasi Keluar
                                 </button>
                             </div>
@@ -559,7 +559,7 @@
                                 <button class="btn collapsed" type="button" data-toggle="collapse"
                                     data-target="#accordion5">
                                     <material-icons class="material-icons-outlined"
-                                        style="margin-right: 6px !important; color:#01579B;">looks_5</material-icons>
+                                        style="margin-right: 6px !important; color:#01579B;">filter_5</material-icons>
                                     Proses Mutasi Masuk
                                 </button>
                             </div>
@@ -685,7 +685,7 @@
                                 <button class="btn collapsed" type="button" data-toggle="collapse"
                                     data-target="#accordion6">
                                     <material-icons class="material-icons-outlined"
-                                        style="margin-right: 6px !important; color:#01579B;">looks_6</material-icons>
+                                        style="margin-right: 6px !important; color:#01579B;">filter_6</material-icons>
                                     Proses Balik Nama Kendaraan
                                 </button>
                             </div>
