--- a/public/index.html
+++ b/public/index.html
@@ -233,16 +233,7 @@
                 <!-- sidebar buttons -->
                 <div class="sidebar-buttons">
                     <a href="javascript:;" class="button">
-                        <ion-icon name="logo-whatsapp"></ion-icon>
-                    </a>
-                    <a href="javascript:;" class="button">
-                        <ion-icon name="logo-instagram"></ion-icon>
-                    </a>
-                    <a href="javascript:;" class="button">
-                        <ion-icon name="logo-facebook"></ion-icon>
-                    </a>
-                    <a href="javascript:;" class="button">
-                        <ion-icon name="logo-twitter"></ion-icon>
+                        <material-icons class="material-icons-outlined">whatsapp</material-icons>
                     </a>
                 </div>
                 <!-- * sidebar buttons -->
