--- a/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -69,7 +69,7 @@
                                     data-target="#accordion1">
                                     <material-icons class="material-icons-outlined"
                                         style="margin-right: 6px !important; color:#01579B;">filter_1</material-icons>
-                                    Proses Pembayaran Pajak 1 Tahunan
+                                    Pembayaran Pajak 1 Tahunan
                                 </button>
                             </div>
                             <div id="accordion1" class="accordion-body collapse" data-parent="#accordion">
@@ -158,7 +158,7 @@
                                     data-target="#accordion2">
                                     <material-icons class="material-icons-outlined"
                                         style="margin-right: 6px !important; color:#01579B;">filter_2</material-icons>
-                                    Proses Pembayaran Pajak 5 Tahunan
+                                    Pembayaran Pajak 5 Tahunan
                                 </button>
                             </div>
                             <div id="accordion2" class="accordion-body collapse" data-parent="#accordion">
