--- a/public/index.html
+++ b/public/index.html
@@ -331,14 +331,14 @@
     <!-- Jquery -->
     <script src="assets/js/lib/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap-->
-    <script src="assets/js/lib/popper.min.js"></script>
+    <script src="assets/js/lib/popper.min.js" async></script>
     <script src="assets/js/lib/bootstrap.min.js"></script>
     <!-- jQuery Circle Progress -->
     <script src="assets/js/plugins/jquery-circle-progress/circle-progress.min.js"></script>
     <!-- Base Js File -->
     <script src="assets/js/base.js"></script>
     <!-- Geolocation Js File -->
-    <script src="assets/js/geolocation.js"></script>
+    <script src="assets/js/geolocation.js" async></script>
     <!-- Add To Home -->
     <script>
         AddtoHome("1000", "once");
