--- a/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -1063,7 +1063,7 @@
     <!-- Jquery -->
     <script src="assets/js/lib/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap-->
-    <script src="assets/js/lib/popper.min.js"></script>
+    <script src="assets/js/lib/popper.min.js" async></script>
     <script src="assets/js/lib/bootstrap.min.js"></script>
     <!-- jQuery Circle Progress -->
     <script src="assets/js/plugins/jquery-circle-progress/circle-progress.min.js"></script>
@@ -1072,7 +1072,7 @@
     <!-- Base Js File -->
     <script src="assets/js/base.js"></script>
     <!-- Geolocation Js File -->
-    <script src="assets/js/geolocation.js"></script>
+    <script src="assets/js/geolocation.js" async></script>
 
 </body>
 
