--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -412,7 +412,7 @@
                             </div>
                         </div>
                         <a href="javascript:;" class="close-sidebar-button" data-dismiss="modal">
-                            <ion-icon name="close"></ion-icon>
+                            <material-icons class="material-icons-outlined">close</material-icons>
                         </a>
                     </div>
                     <!-- * profile box -->
