--- a/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Tata Cara Bayar Pajak, Mutasi & Balik Nama Kendaraan Bermotor</title>
+    <title>Syarat, Proses dan Cara Bayar Pajak, Mutasi & Balik Nama Kendaraan Bermotor</title>
     <meta name="description"
         content="Tata cara dan peraturan mengenai Balik Nama, BPKB, Mutasi, STNK Kendaraan Bermotor baik Motor maupun Mobil">
     <meta name="keywords" content="Cara, Mekanisme, Balik Nama, Mutasi, BPKB, Kehilangan STNK, Motor, Mobil" />
@@ -933,7 +933,7 @@
                 <strong>Cek Pajak</strong>
             </div>
         </a>
-        <a href="tata-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html" class="item active">
+        <a href="syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html" class="item active">
             <div class="col">
                 <material-icons class="material-icons-outlined">class</material-icons>
                 <strong>Petunjuk</strong>
