--- a/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -23,6 +23,7 @@
     <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-TM7FCRS"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213543611-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
