--- a/public/404.html
+++ b/public/404.html
@@ -8,17 +8,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Cek Pajak Dot Info</title>
-    <meta name="description" content="Cek Pajak Kendaraan Bermotor Online Indonesia">
-    <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Online, Indonesia" />
+    <title>Samsat Dot Info</title>
+    <meta name="description" content="Samsat Dot Info - 404">
+    <meta name="keywords" content="Samsat, Informasi, Error, 404" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="assets/css/inc/owl-carousel/owl.carousel.min.css" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
 </head>
@@ -33,7 +29,7 @@
 
     <!-- App Header -->
     <div class="appHeader no-border transparent position-absolute">
-        <div class="pageTitle">Not Found</div>
+        <div class="pageTitle">Error 404 : Not Found</div>
         <div class="right">
         </div>
     </div>
@@ -44,10 +40,10 @@
 
         <div class="error-page">
             <div class="mb-2">
-                <img src="assets/img/Logo-Cek-Pajak-Dot-Info.png" width="200" height="200" alt="Cek Pajak Online"
+                <img src="assets/img/Logo-Samsat-Dot-Info.png" width="200" height="200" alt="Cek Pajak Online"
                     class="imaged square w200">
             </div>
-            <h1 class="title">Error 404</h1>
+            <h1 class="title">Halaman tidak ditemukan</h1>
             <div id="countDown" class="mb-5"></div>
 
             <div class="fixed-footer">
@@ -69,10 +65,6 @@
     <!-- Bootstrap-->
     <script src="assets/js/lib/popper.min.js"></script>
     <script src="assets/js/lib/bootstrap.min.js"></script>
-    <!-- Ionicons -->
-    <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
-    <!-- Owl Carousel -->
-    <script src="assets/js/plugins/owl-carousel/owl.carousel.min.js"></script>
     <!-- jQuery Circle Progress -->
     <script src="assets/js/plugins/jquery-circle-progress/circle-progress.min.js"></script>
     <!-- Base Js File -->
