--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,26 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
     <title>Cek Pajak Dot Info</title>
-    <meta name="description" content="Cek Pajak Kendaraan Bermotor Online Indonesia">
-    <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Online, Indonesia" />
-    <meta property="og:title" content="Cek Pajak Kendaraan Bermotor" />
+    <meta name="description" content="Informasi Samsat Indonesia">
+    <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Samsat, Online, Indonesia" />
+    <meta property="og:title" content="Samsat Dot Info" />
     <meta property="og:description"
-        content="Informasi lengkap Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
-    <meta property="og:url" content="https://cekpajak.info" />
-    <meta property="og:image" content="https://cekpajak.info/assets/img/Logo-Cek-Pajak-Dot-Info.png" />
+        content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
+    <meta property="og:url" content="https://samsat.info" />
+    <meta property="og:image" content="https://samsat.info/assets/img/Logo-Samsat-Dot-Info.png" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213543611-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z7BEWWEY6N"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'UA-213543611-1');
+
+        gtag('config', 'G-Z7BEWWEY6N');
     </script>
 </head>
 
