--- a/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -12,23 +12,24 @@
     <meta name="description"
         content="Tata cara dan peraturan mengenai Balik Nama, BPKB, Mutasi, STNK Kendaraan Bermotor baik Motor maupun Mobil">
     <meta name="keywords" content="Cara, Mekanisme, Balik Nama, Mutasi, BPKB, Kehilangan STNK, Motor, Mobil" />
-    <meta property="og:title" content="Cek Pajak Kendaraan Bermotor" />
+    <meta property="og:title" content="Samsat Dot Info" />
     <meta property="og:description"
-        content="Informasi lengkap Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
-    <meta property="og:url" content="https://cekpajak.info" />
-    <meta property="og:image" content="https://cekpajak.info/assets/img/Logo-Cek-Pajak-Dot-Info.png" />
+        content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
+    <meta property="og:url" content="https://samsat.info" />
+    <meta property="og:image" content="https://samsat.info/assets/img/Logo-Samsat-Dot-Info.png" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213543611-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z7BEWWEY6N"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'UA-213543611-1');
+
+        gtag('config', 'G-Z7BEWWEY6N');
     </script>
 </head>
 
