--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
                     <div class="appFooter">
                         <img src="assets/img/logo.png" width="160" height="18" alt="icon" class="footer-logo mb-2">
                         <div class="footer-title">
-                            Copyright © Cek Pajak Dot Info 2021.
+                            Copyright © Samsat Dot Info 2022.
                         </div>
                     </div>
                 </footer>
