--- a/public/404.html
+++ b/public/404.html
@@ -40,7 +40,7 @@
 
         <div class="error-page">
             <div class="mb-2">
-                <img src="assets/img/Logo-Samsat-Dot-Info.png" width="200" height="200" alt="Cek Pajak Online"
+                <img src="assets/img/icon/384x384.png" width="200" height="200" alt="Cek Pajak Online"
                     class="imaged square w200">
             </div>
             <h1 class="title">Halaman tidak ditemukan</h1>
