--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Cek Pajak Dot Info</title>
+    <title>Informasi Samsat</title>
     <meta name="description" content="Informasi Samsat Indonesia">
     <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Samsat, Online, Indonesia" />
     <meta property="og:title" content="Samsat Dot Info" />
     <meta property="og:description"
-        content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
+        content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, Biaya Balik Nama dan Biaya Mutasi." />
     <meta property="og:url" content="https://samsat.info" />
     <meta property="og:image" content="https://samsat.info/assets/img/Logo-Samsat-Dot-Info.png" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
@@ -45,7 +45,7 @@
         <!-- App Header -->
         <div class="appHeader">
             <div class="pageTitle">
-                <img src="assets/img/logo.png" width="240" height="27" alt="Cek Pajak Dot Info" class="logo">
+                <img src="assets/img/Informasi-Samsat.png" width="240" height="27" alt="Informasi Samsat Nasional" class="logo">
             </div>
         </div>
         <!-- * App Header -->
@@ -99,7 +99,7 @@
                 <!-- app footer -->
                 <footer role="contentinfo">
                     <div class="appFooter">
-                        <img src="assets/img/logo.png" width="160" height="18" alt="icon" class="footer-logo mb-2">
+                        <img src="assets/img/Logo-Samsat-Dot-Info.png" width="240" height="27px !important" alt="icon" class="footer-logo mb-2">
                         <div class="footer-title">
                             Copyright © Samsat Dot Info 2022.
                         </div>
