--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Tarif & Biaya Pajak Kendaraan Bermotor</title>
+    <title>Tarif dan Biaya Balik Nama, Mutasi, BPKB, SIM dan Pajak Kendaraan Bermotor</title>
     <meta name="description" content="Tarif dan Biaya Balik Nama, Mutasi, BPKB, SIM dan Pajak Motor dan Mobil">
     <meta name="keywords" content="Tarif, Biaya, Pajak, Motor, Mobil, STNK, Balik Nama, BPKB, SIM" />
     <meta property="og:title" content="Samsat Dot Info" />
