--- a/public/kalkulator-pajak-kendaraan-bermotor.html
+++ b/public/kalkulator-pajak-kendaraan-bermotor.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Cek Pajak Dot Info</title>
+    <title>Kalkulator Pajak Kendaraan Bermotor</title>
     <meta name="description" content="Kalkulator Pajak Kendaraan Bermotor">
     <meta name="keywords" content="Cek Pajak, Kalkulator, Pajak, Kendaraan Bermotor, Samsat, Online, Indonesia" />
     <meta property="og:title" content="Samsat Dot Info" />
@@ -64,7 +64,7 @@
 
         <div class="error-page">
             <div class="mb-2">
-                <img src="assets/img/Logo-Samsat-Dot-Info.png" width="200" height="200" alt="Cek Pajak Online"
+                <img src="assets/img/icon/384x384.png" width="200" height="200" alt="Cek Pajak Online"
                     class="imaged square w200">
             </div>
             <h1 class="title">Akan Datang !!</h1>
